After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653296 - Chicken and egg problem with connection settings (insensitive 'Configure...' for inactive connections)
Chicken and egg problem with connection settings (insensitive 'Configure...' ...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.4.x
Other Linux
: Normal major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 646015 648339 663773 665874 672835 677479 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-06-24 00:50 UTC by George Lebl
Modified: 2012-06-07 14:22 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4



Description George Lebl 2011-06-24 00:50:27 UTC
So the current UI grays out the "Options..." button on the network settings when there is no connection.  This has two problems:

First: I have a connection that will not happen unless I change the settings.  I can't change the settings on my "wired connection" until it connects, which it never does.  (I have to set the mac address to something specific)

Yes I know I can do this through different tools, but that sort of defeats the purpose of this whole dialog.

Second: Also I just essentially hosed my network by "turning on" ipv6 in the options dialog.  Then the connection was lost and never recovered (keeps trying to reconnect forever).  From the point of view of a regular user I have hosed things: I made a change in a dialog into which I have no way of getting back until those settings are unhosed, which is done with that dialog.  Catch 22.

IMO this is a UI bug.

Suggestion: allow clicking the options button even if the connection is not active.
Comment 1 Pierre Ossman 2011-11-09 20:45:19 UTC
+1

The fact that you have to activate a connection before you can configure it is a rather large and annoying restriction.
Comment 2 Jiri Klimes 2012-04-04 10:31:19 UTC
*** Bug 672835 has been marked as a duplicate of this bug. ***
Comment 3 Jiri Klimes 2012-05-11 12:26:35 UTC
*** Bug 663773 has been marked as a duplicate of this bug. ***
Comment 4 Jiri Klimes 2012-05-11 12:30:20 UTC
*** Bug 648339 has been marked as a duplicate of this bug. ***
Comment 5 Jiri Klimes 2012-05-11 12:31:42 UTC
*** Bug 646015 has been marked as a duplicate of this bug. ***
Comment 6 Jiri Klimes 2012-05-11 12:33:07 UTC
*** Bug 665874 has been marked as a duplicate of this bug. ***
Comment 7 Richard Hughes 2012-05-30 13:26:20 UTC
commit fc9b6a57f8765505bd2a9f2e33d119538af1333f
Author: Richard Hughes <richard@hughsie.com>
Date:   Wed May 30 14:23:45 2012 +0100

    network: Allow configuring wired network devices when not connected
    
    This prevents the chicken-and-egg problem as described in #653296 by launching
    nm-connection-editor for the inactive connection for the device.
    
    This only works when there is one possible connection for the device, which is
    helpfully typical for wired ethernet devices.
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=653296
Comment 8 Milan Bouchet-Valat 2012-06-02 10:00:13 UTC
Great! ;-)
Comment 9 Martin Erik Werner 2012-06-07 14:22:18 UTC
*** Bug 677479 has been marked as a duplicate of this bug. ***