network: Allow configuring wired network devices when not connected

This prevents the chicken-and-egg problem as described in #653296 by launching
nm-connection-editor for the inactive connection for the device.

This only works when there is one possible connection for the device, which is
helpfully typical for wired ethernet devices.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=653296